--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
 
             <div class="social-links">
-                <a href="https://linkedin.com/in/erickotieno" target="_blank" class="social-link" title="LinkedIn">in</a>
+                <a href="https://www.linkedin.com/in/erick-otieno-8014916a/" target="_blank" class="social-link" title="LinkedIn">in</a>
                 <a href="https://github.com/erickotieno" target="_blank" class="social-link" title="GitHub">gh</a>
                 <a href="https://twitter.com/erickotieno" target="_blank" class="social-link" title="Twitter">tw</a>
             </div>
@@ -229,4 +229,5 @@
     </footer>
     <script src="main.js"></script>   
 </body>
+
 </html>
